create product slider sections

--- a/index.html
+++ b/index.html
@@ -156,82 +156,142 @@
     <div class="furniture_icon">
       <ul class="flex">
         <li class="flex1">
-          <div class="furniture_wrap">
-            <img src="images/icon1.png" alt="" />
+          <div class="furniture_content">
+            <div class="furniture_wrap">
+              <img src="images/icon1.png" alt="" />
+            </div>
+            <span>Sofa</span>
           </div>
         </li>
         <li class="flex1">
-          <div class="furniture_wrap">
-            <img src="images/icon2.png" alt="" />
+          <div class="furniture_content">
+            <div class="furniture_wrap">
+              <img src="images/icon2.png" alt="" />
+            </div>
+            <span>wardrobe</span>
           </div>
         </li>
         <li class="flex1">
-          <div class="furniture_wrap">
-            <img src="images/icon3.png" alt="" />
+          <div class="furniture_content">
+            <div class="furniture_wrap">
+              <img src="images/icon3.png" alt="" />
+            </div>
+            <span>table</span>
           </div>
         </li>
         <li class="flex1">
-          <div class="furniture_wrap">
-            <img src="images/icon4.png" alt="" />
+          <div class="furniture_content">
+            <div class="furniture_wrap">
+              <img src="images/icon4.png" alt="" />
+            </div>
+            <span>chair</span>
           </div>
         </li>
         <li class="flex1">
-          <div class="furniture_wrap">
-            <img src="images/icon5.png" alt="" />
+          <div class="furniture_content">
+            <div class="furniture_wrap">
+              <img src="images/icon5.png" alt="" />
+            </div>
+            <span>sofa</span>
           </div>
         </li>
         <li class="flex1">
-          <div class="furniture_wrap">
-            <img src="images/icon6.png" alt="" />
+          <div class="furniture_content">
+            <div class="furniture_wrap">
+              <img src="images/icon6.png" alt="" />
+            </div>
+            <span>Dressing</span>
           </div>
         </li>
         <li class="flex1">
-          <div class="furniture_wrap">
-            <img src="images/icon7.png" alt="" />
+          <div class="furniture_content">
+            <div class="furniture_wrap">
+              <img src="images/icon7.png" alt="" />
+            </div>
+            <span>Desk</span>
           </div>
         </li>
       </ul>
     </div>
-    <!-- Trending Section -->
-    <div class="TrendingProduct_outer">
-      <div class="container_fluid">
+    <!-- trending Section -->
+    <div class="trendingProduct_outer">
+      <div class="container">
         <div class="mainContent_header space_xy text_center">
-          <h2 class="main_heading">Trending this Week</h2>
+          <h2 class="main_heading">trending this Week</h2>
           <p class="main_para">
             Lorem ipsum, dolor sit amet consectetur adipisicing elit.
           </p>
         </div>
-        <div class="TrendingProduct_list flex">
-          <div class="TrendingProduct_items TrendingProduct_items1 flex1">
-            <div class="TrendingProduct_wrap">
-              <img src="Images/bag.jpeg" alt="" loading="lazy" />
-
-              <div class="TrendingProduct_content">
-                <div class="subHeading">online exclusive</div>
-                <h2>Oversized Shirt</h2>
-                <a class="customBtn">Click Here</a>
+        <div class="trendingProduct_list flex">
+          <div class="trendingProduct_items trendingProduct_items1">
+            <div class="trendingProduct_wrap">
+              <img src="images/08.jpeg" alt="" loading="lazy" />
+            </div>
+            <div class="trendingProduct_content">
+              <h2>Oversized Shirt</h2>
+              <div class="price">
+                <span class="main_price">$116.00</span>
+                <span class="price_discount">$120.00</span>
               </div>
             </div>
           </div>
-          <div class="TrendingProduct_items TrendingProduct_items2 flex1">
-            <div class="TrendingProduct_wrap">
-              <img src="Images/bag8.jpeg" alt="" loading="lazy" />
-
-              <div class="TrendingProduct_content">
-                <div class="subHeading">best seller</div>
-                <h2>uniqe bag</h2>
-                <a class="customBtn">Click Here</a>
+          <div class="trendingProduct_items trendingProduct_items2">
+            <div class="trendingProduct_wrap">
+              <img src="images/01.jpeg" alt="" loading="lazy" />
+            </div>
+            <div class="trendingProduct_content">
+              <h2>uniqe bag</h2>
+              <div class="price">
+                <span class="main_price">$116.00</span>
+                <span class="price_discount">$120.00</span>
               </div>
             </div>
           </div>
-          <div class="TrendingProduct_items TrendingProduct_items3 flex1">
-            <div class="TrendingProduct_wrap">
-              <img src="Images/bag1.jpeg" alt="" loading="lazy" />
-
-              <div class="TrendingProduct_content">
-                <div class="subHeading">limited adition</div>
-                <h2>autumn trending</h2>
-                <a class="customBtn">Click Here</a>
+          <div class="trendingProduct_items trendingProduct_items3">
+            <div class="trendingProduct_wrap">
+              <img src="images/06.jpeg" alt="" loading="lazy" />
+            </div>
+            <div class="trendingProduct_content">
+              <h2>autumn trending</h2>
+              <div class="price">
+                <span class="main_price">$116.00</span>
+                <span class="price_discount">$120.00</span>
+              </div>
+            </div>
+          </div>
+          <div class="trendingProduct_items trendingProduct_items3">
+            <div class="trendingProduct_wrap">
+              <img src="images/04.jpeg" alt="" loading="lazy" />
+            </div>
+            <div class="trendingProduct_content">
+              <h2>autumn trending</h2>
+              <div class="price">
+                <span class="main_price">$116.00</span>
+                <span class="price_discount">$120.00</span>
+              </div>
+            </div>
+          </div>
+          <div class="trendingProduct_items trendingProduct_items3">
+            <div class="trendingProduct_wrap">
+              <img src="images/10.jpeg" alt="" loading="lazy" />
+            </div>
+            <div class="trendingProduct_content">
+              <h2>autumn trending</h2>
+              <div class="price">
+                <span class="main_price">$116.00</span>
+                <span class="price_discount">$120.00</span>
+              </div>
+            </div>
+          </div>
+          <div class="trendingProduct_items trendingProduct_items3">
+            <div class="trendingProduct_wrap">
+              <img src="images/09.jpeg" alt="" loading="lazy" />
+            </div>
+            <div class="trendingProduct_content">
+              <h2>autumn trending</h2>
+              <div class="price">
+                <span class="main_price">$116.00</span>
+                <span class="price_discount">$120.00</span>
               </div>
             </div>
           </div>
@@ -239,8 +299,8 @@
       </div>
     </div>
     <!-- newProduct Section -->
-    <div class="newProduct_outer">
-      <div class="container_fluid">
+    <!-- <div class="newProduct_outer">
+      <div class="container">
         <div class="mainContent_header space_xy text_center">
           <h2 class="main_heading">New Arrivals</h2>
           <p class="main_para">
@@ -252,7 +312,7 @@
             <div class="products_content">
               <div class="product_wrapper">
                 <div class="discount_badge">-20%</div>
-                <img src="Images/bag1.jpeg" alt="" loading="lazy" />
+                <img src="images/01.jpeg" alt="" loading="lazy" />
               </div>
               <div class="product_innerContent">
                 <h3 class="products_title">Heading for product</h3>
@@ -378,7 +438,7 @@
           <div class="products_items">
             <div class="products_content">
               <div class="product_wrapper">
-                <img src="Images/bag2.jpeg" alt="" loading="lazy" />
+                <img src="images/02.jpeg" alt="" loading="lazy" />
               </div>
               <div class="product_innerContent">
                 <h3 class="products_title">Heading for product</h3>
@@ -505,7 +565,7 @@
             <div class="products_content">
               <div class="product_wrapper">
                 <div class="discount_badge">-20%</div>
-                <img src="Images/bag3.jpeg" alt="" loading="lazy" />
+                <img src="images/03.jpeg" alt="" loading="lazy" />
               </div>
               <div class="product_innerContent">
                 <h3 class="products_title">Heading for product</h3>
@@ -631,7 +691,7 @@
           <div class="products_items">
             <div class="products_content">
               <div class="product_wrapper">
-                <img src="Images/bag5.jpeg" alt="" loading="lazy" />
+                <img src="images/04.jpeg" alt="" loading="lazy" />
               </div>
               <div class="product_innerContent">
                 <h3 class="products_title">Heading for product</h3>
@@ -757,7 +817,7 @@
           <div class="products_items">
             <div class="products_content">
               <div class="product_wrapper">
-                <img src="Images/bag7.jpeg" alt="" loading="lazy" />
+                <img src="images/05.jpeg" alt="" loading="lazy" />
               </div>
               <div class="product_innerContent">
                 <h3 class="products_title">Heading for product</h3>
@@ -883,7 +943,7 @@
           <div class="products_items">
             <div class="products_content">
               <div class="product_wrapper">
-                <img src="Images/bag6.jpeg" alt="" loading="lazy" />
+                <img src="images/06.jpeg" alt="" loading="lazy" />
               </div>
               <div class="product_innerContent">
                 <h3 class="products_title">Heading for product</h3>
@@ -1008,7 +1068,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <!-- Feature Section -->
     <div class="feature_outer">
       <div class="container">
