create new sections

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         </div>
       </div>
       <div class="hero_content">
-        <img src="images/01.jpeg" alt="" />
+        <img src="images/12.jpeg" alt="" />
         <div class="hero_innerContent">
           <span class="subHeading">Modern Living Room</span>
           <h1 class="hero_title">DECORATE YOUR ROOM</h1>
@@ -144,7 +144,7 @@
         </div>
       </div>
       <div class="hero_content">
-        <img src="images/01.jpeg" alt="" />
+        <img src="images/011.jpeg" alt="" />
         <div class="hero_innerContent">
           <span class="subHeading">Modern Living Room</span>
           <h1 class="hero_title">DECORATE YOUR ROOM</h1>
@@ -1115,7 +1115,7 @@
           <div class="testimonial_item">
             <div class="testimonial_content">
               <div class="testimonial_wrapper">
-                <img src="Images/smile.svg" alt="" loading="lazy" />
+                <img src="images/26.jpeg" alt="" loading="lazy" />
               </div>
               <p class="testimonial_text">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit.
@@ -1237,7 +1237,7 @@
           <div class="testimonial_item">
             <div class="testimonial_content">
               <div class="testimonial_wrapper">
-                <img src="Images/smile.svg" alt="" loading="lazy" />
+                <img src="images/26.jpeg" alt="" loading="lazy" />
               </div>
               <p class="testimonial_text">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit.
@@ -1359,7 +1359,7 @@
           <div class="testimonial_item">
             <div class="testimonial_content">
               <div class="testimonial_wrapper">
-                <img src="Images/smile.svg" alt="" loading="lazy" />
+                <img src="images/26.jpeg" alt="" loading="lazy" />
               </div>
               <p class="testimonial_text">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit.
@@ -1481,7 +1481,7 @@
           <div class="testimonial_item">
             <div class="testimonial_content">
               <div class="testimonial_wrapper">
-                <img src="Images/smile.svg" alt="" loading="lazy" />
+                <img src="images/26.jpeg" alt="" loading="lazy" />
               </div>
               <p class="testimonial_text">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit.
@@ -1603,7 +1603,7 @@
           <div class="testimonial_item">
             <div class="testimonial_content">
               <div class="testimonial_wrapper">
-                <img src="Images/smile.svg" alt="" loading="lazy" />
+                <img src="images/26.jpeg" alt="" loading="lazy" />
               </div>
               <p class="testimonial_text">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit.
@@ -1725,7 +1725,7 @@
           <div class="testimonial_item">
             <div class="testimonial_content">
               <div class="testimonial_wrapper">
-                <img src="Images/smile.svg" alt="" loading="lazy" />
+                <img src="images/26.jpeg" alt="" loading="lazy" />
               </div>
               <p class="testimonial_text">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit.
@@ -1853,8 +1853,7 @@
         <div class="footer_list flex">
           <div class="footer_item flex1">
             <div class="footer_dis">
-              <div class="logo">fashion</div>
-
+              <div class="logo">furniture</div>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia
                 debitis praesentium aliquam, eos delectus cupiditate.
